--- a/map.html
+++ b/map.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8' />
-    <title>Otter prototype</title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-      }
-    </style>
-  </head>
-  <body>
+    <head>
+        <meta charset='utf-8' />
+        <title>Aaron's Houses!</title>
+        <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+        <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
+        <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
+        <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+        }
+        </style>
+    </head>
+    <body>
 
       <style>
         #menu {
           position: absolute;
-	  bottom: 10px;
+	      bottom: 10px;
           right: 50px;
-          background: #fff;
           padding: 10px;
           font-family: 'Open Sans', sans-serif;
         }
@@ -35,7 +34,7 @@
 			}
         .mapboxgl-popup-content {
 			  font: 400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
-			  padding: 0;
+              padding: 0;
 			  width: 300px;
         		  max-height: 250px;
         		  overflow: auto;
@@ -70,9 +69,6 @@
 		}
       </style>
 
-    <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v3.1.6/mapbox-gl-geocoder.min.js'></script>
-    <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v3.1.6/mapbox-gl-geocoder.css' type='text/css' />
-
     <div id='map'></div>
 
     <script>
@@ -87,33 +83,15 @@
       attributionControl: false,
       container: 'map',
       style: 'mapbox://styles/mapbox/light-v10', // replace this with your style URL
-      center: [-121.500,38.304],
-      zoom: 6.8,
+      center: [ -122.368135,37.864116],
+      zoom: 9,
       maxBounds: bounds // Sets bounds as max
     });
     var hoverdStateID = null;
     map.addControl(new mapboxgl.AttributionControl({
         compact: true
     }));
-    //Add Geocoder
-    map.addControl(new MapboxGeocoder({
-        accessToken: mapboxgl.accessToken,
-	// limit results to United States
-	countries: 'us',
-	// further limit results to the geographic bounds representing the United States
-	bbox: [-171.791110603, 18.91619, -66.96466, 71.3577635769],
  
-	// apply a client side filter to further limit results to those strictly within the United States
-	filter: function (item) {
-	// returns true if item contains United States region
-		return item.context.map(function (i) {
-	// id is in the form {index}.{id} per https://github.com/mapbox/carmen/blob/master/carmen-geojson.md
-	// this example attempts to find the `country` named `United States`
-		return (i.id.split('.').shift() === 'country' && i.text === 'United States');
-		}).reduce(function (acc, cur) {
-		return acc || cur;
-    		})}
-	}));
     // Add zoom and rotation controls to the map.
     map.addControl(new mapboxgl.NavigationControl());
       function mapReset() {
@@ -121,45 +99,68 @@
     map.loadImage('https://avatars3.githubusercontent.com/u/7566896?s=400&v=4', function(error, image) {
         if (error) throw error;
         map.addImage('aaron', image);
+        });
+
+    map.loadImage('https://avatars1.githubusercontent.com/u/37987755?s=460&v=4', function(error, image) {
+        if (error) throw error;
+        map.addImage('lucy', image);
+        });
+
     map.on('load', function() {
       mapReset();
       map.addSource("houses", {
           type: 'geojson',
-          data: 'https://raw.githubusercontent.com/Geo-Corps/otter_map/master/otters.geojson',
+          data: 'https://raw.githubusercontent.com/zstatmanweil/aaron-birthday/master/data/housing.geojson',
       });
       map.addLayer({
-          id: "unclustered-point",
+          id: "points",
           type: "symbol",
           source: "houses",
           layout: {
-                "icon-image": "aaron",
-                "icon-size": 0.25
+                "icon-image": ["case",
+                                ["==",
+                                ["get", "Roommates"],
+                                "Lucy Rose Taylor"
+                                ],
+                                "lucy",
+                                "aaron"
+                                ],
+                "icon-size": ["case",
+                                ["==",
+                                ["get", "Roommates"],
+                                "Lucy Rose Taylor"
+                                ],
+                                .1,
+                                .3
+                                ]
                 }
       });
     });
     
 
-      // Change the cursor to a pointer when the mouse is over the unclustered-point layer.
-      map.on('mouseenter', 'unclustered-point', function () {
-          map.getCanvas().style.cursor = 'pointer';
-      });
-      // Change it back to a pointer when it leaves.
-      map.on('mouseleave', 'unclustered-point', function () {
-          map.getCanvas().style.cursor = '';
-      });
-  // Add popups
-      map.on('click', 'unclustered-point', function (e) {
-          var coordinates = e.features[0].geometry.coordinates.slice();
-          var description = e.features[0].properties.Description;
-          var notes = e.features[0].properties.Notes;
-          // Ensure that if the map is zoomed out such that multiple
-          // copies of the feature are visible, the popup appears
-          // over the copy being pointed to.
-          while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-              coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-          }
-        //var features = feature[0];
-        var markerHeight = 20, markerRadius = 10, linearOffset = 25;
+    // Change the cursor to a pointer when the mouse is over the points layer.
+    map.on('mouseenter', 'points', function () {
+        map.getCanvas().style.cursor = 'pointer';
+    });
+    // Change it back to a pointer when it leaves.
+    map.on('mouseleave', 'points', function () {
+        map.getCanvas().style.cursor = '';
+    });
+    // Add popups
+    map.on('click', 'points', function (e) {
+        var coordinates = e.features[0].geometry.coordinates.slice();
+        var address = e.features[0].properties.Address;
+        var roommates = e.features[0].properties.Roommates;
+        var start = e.features[0].properties.Start;
+
+        // Ensure that if the map is zoomed out such that multiple
+        // copies of the feature are visible, the popup appears
+        // over the copy being pointed to.
+        while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
+            coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
+        }
+    //var features = feature[0];
+    var markerHeight = 20, markerRadius = 10, linearOffset = 25;
 	var popupOffsets = {
 	 'top': [0, 0],
 	 'top-left': [0,0],
@@ -172,10 +173,9 @@
 	 };
       new mapboxgl.Popup({offset: popupOffsets})
       .setLngLat(coordinates)
-      .setHTML('<h3>Aaron\'s Crib:</h3>' + '<h4>Address:<h4>'+ description + '<h4>Roomies:<h4>' +  notes)
+      .setHTML('<h3>Aaron\'s Crib:</h3>' + '<h4>Move-in date:<h4>' + start + '<h4>Address:<h4>'+ address + '<h4>Roomies:<h4>' +  roommates)
       .addTo(map);
     });
-  });
     </script>
 </body>
 </html>
