--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 	 };
       new mapboxgl.Popup({offset: popupOffsets})
       .setLngLat(coordinates)
-      .setHTML('<h3>Aaron\'s Crib:</h3>' + '<h4>Move-in date:<h4>' + start + '<h4>Address:<h4>'+ address + '<h4>Roomies:<h4>' +  roommates)
+      .setHTML('<h3>Aaron\'s Crib:</h3>' + '<h4><strong>Move-in date:<strong><h4>' + start + '<h4><strong>Address:<strong><h4>'+ address + '<h4><strong>Roomies:<strong><h4>' +  roommates)
       .addTo(map);
     });
     </script>
