Change images to be ones that I made

--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
     map.addControl(new mapboxgl.NavigationControl());
       function mapReset() {
     }
-    map.loadImage('https://avatars3.githubusercontent.com/u/7566896?s=400&v=4', function(error, image) {
+    map.loadImage('img/face.png', function(error, image) {
         if (error) throw error;
         map.addImage('aaron', image);
         });
 
-    map.loadImage('https://avatars1.githubusercontent.com/u/37987755?s=460&v=4', function(error, image) {
+    map.loadImage('img/lucy.png', function(error, image) {
         if (error) throw error;
         map.addImage('lucy', image);
         });
@@ -131,7 +131,7 @@
       mapReset();
       map.addSource("houses", {
           type: 'geojson',
-          data: 'https://raw.githubusercontent.com/zstatmanweil/aaron-birthday/master/data/housing.geojson',
+          data: './data/housing.geojson',
       });
       map.addLayer({
           id: "points",
@@ -151,15 +151,14 @@
                                 ["get", "Roommates"],
                                 "Lucy Rose Taylor"
                                 ],
-                                .1,
-                                .3
+                                .25,
+                                .25
                                 ]
                 }
       });
     });
 
     var popup;
-                
 
     // Change the cursor to a pointer when the mouse is over the points layer.
     map.on('mouseenter', 'points', function () {
