--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     </head>
     <body>
     <div id='map'></div>
-    <div id='welcome' class='map-overlay'>Welcome! Hover over an image to find out more!</div>
+    <div id='welcome' class='map-overlay'>
+        <h1>Aaron's Lived All Over!</h1>
+        <p>
+            Scroll and zoom around. See if YOU can find where he's moving with in with his boo.
+        </p>
+    </div>
     <script type="text/javascript" src="./main.js"></script>
     </body>
 </html>
