open graph so it's cool to text to peopel

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
         <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
         <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
         <link href="./styles.css" rel="stylesheet"/>
+
+
+        <!--
+             See opengraph: http://ogp.me/
+             This stuff makes it so that when you share it on iMessage or other social media stufff
+             it knows how to display an image
+        -->
+        <meta property="og:title" content="Aaron & Lucy make a move!" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="./img/our-new-home.png" />
+        <meta property="twitter:creator" content="@zboknows">
     </head>
     <body>
         <div id='map'></div>
