Made overlay dissappear after first hover

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         -->
         <meta property="og:title" content="Aaron & Lucy make a move!" />
         <meta property="og:type" content="website" />
-        <meta property="og:image" content="./img/our-new-home.png" />
+        <meta property="og:image" content="/img/our-new-home.png" />
         <meta property="twitter:creator" content="@zboknows">
     </head>
     <body>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <div id='map'></div>
         <div id='welcome' class='map-overlay'>
             <h1>Aaron's Lived All Over!</h1>
